--- a/package.json
+++ b/package.json
@@ -17,5 +17,11 @@
     "next-router": "^1.3.6",
     "react": "18.2.0",
     "react-dom": "18.2.0"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.14",
+    "postcss": "^8.4.21",
+    "sass": "^1.59.3",
+    "tailwindcss": "^3.2.7"
   }
 }
